Pagina principal, varias sinopses e detalhes esteticos

--- a/contato.html
+++ b/contato.html
@@ -20,9 +20,9 @@
         <h2>Gostaria de deixar alguma sugestão para a equipe?</h2>
         <form action="https://formspree.io/f/mleazpwv" method="post">
             <h4>Nome:</h4>
-            <input type="text" name="nome" title="Nome" value="">
+            <input type="text" name="nome" title="Nome" placeholder="Digite seu nome">
             <h4>E-mail:</h4>
-            <input type="email" name="email" title="E-mail" value="">
+            <input type="email" name="email" title="E-mail" placeholder="Digite seu e-mail">
             <h4></h4>
             <fieldset id="opcoes">
                 <legend>Sobre quais partes você deseja comentar?</legend>
@@ -35,10 +35,11 @@
                 </ul>
             </fieldset>
             <h4>Sugestão:</h4>
-            <textarea name="sugestao-do-usuario" rows="5" cols="50" title="Sugestão"></textarea>
+            <textarea name="sugestao-do-usuario" rows="5" cols="50" title="Sugestão" placeholder="Qual sua sugestao para a equipe?"></textarea>
             <h3></h3>
             <button type="submit">Enviar sugestão</button>
         </form>
+        <br><br>
     </div>
 </body>
 </html>
