--- a/equipe.html
+++ b/equipe.html
@@ -19,16 +19,26 @@
     <div id="conteudo" class="equipe">
         <h1>Equipe desenvolvedora<br><br></h1>
         <div class="grid-equipe" id="alvaro">
-            <img src="" alt="Álvaro" width="360px" height="360px">
-            <p><b>Álvaro Renan</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+            <img src="Imagens/Alvaro.jpeg" alt="Álvaro" width="360px" height="360px">
+            <p><b>Álvaro Renan</b><br><br>
+                Estudante de Análise e Desenvolvimento de Sistemas que adora tecnologia mas odeia front-end. Foi um dos que incitou o amigo abaixo a fazer a faculdade por pura inocência. Sobreviveu a muitos episódios desastrosos no primeiro período (isso inclui o projeto de linguagens de marcação). 
+                Pretende ser Desenvolvedor de Jogos, mesmo sabendo que pode ficar várias noites sem dormir e potencialmente desenvolver ansiedade e maus hábitos de saúde.<br>
+                Frase de efeito: “Não tenho frase de efeito! E agora???”</p>
         </div>
         <div class="grid-equipe" id="caio">
             <img src="Imagens/Caio.jpeg" alt="Caio" width="360px" height="360px">
-            <p><b>Caio Pinheiro</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+            <p><b>Caio Pinheiro</b><br><br>
+                Quando o site estava, em teoria, todo pronto, essa era a alma que decidia colocar enfeites no CSS. Não raramente, também era quem quebrava a formatação do texto e a concertava por meio de gambiarras, afinal não temos cono lidar com tudo na vida sem usar métodos alternativos. 
+                Sem o menor pingo de juízo ou conhecimento, ingressou no curso de Análise e Desenvolvimento de Sistemas, turma de 2021.1, por influência dos que hoje lhe fazem sofrer com front-end em um site para projeto final da cadeira "Linguagens de Marcação", vulgo os demais membros da equipe aqui apresentada.<br>
+                Frase de efeito: "O site tá bonito? Não tá. O site tá humilde".</p>
         </div>
         <div class="grid-equipe" id="debora">
-            <img src="" alt="Débora" width="360px" height="360px">
-            <p><b>Débora Camilly</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+            <img src="Imagens/Debora.jpeg" alt="Débora" width="360px" height="360px">
+            <p><b>Débora Camilly</b><br><br>
+                Estudante de ADS (Análise e Desenvolvimento de Sistemas), fã de tecnologia, que caiu de paraquedas no curso na turma de 2021.1, sobrevivente do projeto final de "Linguagens de Marcação".<br>
+                Frase de efeito: "Confie no seu potencial, só não esqueça que você é limitado, mas independente de tudo, o que vale é a intenção".</p>
         </div>
+        <br><br>
+    </div>
 </body>
 </html>
