--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <title>Página Principal</title>
 </head>
-<body>
+<body id="pag-princ">
     <div id="barra-lateral">
         <p class="links-barra" id="primeira-crianca"><a href="filmes.html" class="links-barra">Filmes</a></p>
         <p class="links-barra"><a href="series.html" class="links-barra">Séries</a></p>
@@ -16,12 +16,19 @@
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
     <div id="conteudo">
-        <h1 id="titulo">Hello World!</h1>
-        <p><a id="link-contato" href="contato.html">Contato</a></p>
-        <p><a id="link-equipe" href="equipe.html">Equipe</a></p>
+        <h1 id="titulo">Olá, pessoa de bem! Seja bem vinda!</h1>
+        <h2>Sobre o site:<br></h2>
+        <div id="publi2">
+            <p>Este é um site de indicações de mídias para entretenimento em forma de quiz. Ao entrar em uma página, você verá duas informações referentes ao tema: gêneros e sinopse.
+                Mas cuidado, nem tudo é o que parece ser! Há informações que foram alteradas para proporcionar certa margem de erro. Caso queira, tente adivinhar do que se trata antes
+                de prosseguir.<br>Para verificar a resposta, basta apertar no botão "Descobriu qual é?". Ao fazê-lo, você terá acesso ao nome, descrição e imagem relacionados à mídia. 
+                Se sentir interesse por ela, aperte na imagem disponibilizada para carregar um vídeo, que mostrará mais sobre aquilo.<br><br>O site será atualizado semanalmente, então não 
+                fique de fora :)<br><br><br>Quer conhecer a equipe? <a href="equipe.html">conheça</a> <br>Tem alguma ideia para compartilhar conosco? <a href="contato.html">compartilhe</a></p>
+            <img src="https://cdlsertania.files.wordpress.com/2012/11/caravana-nissin-miojo-19-09-12-3.jpg" height="360px">
+        </div>
+        <div class="publi">
+            <a href="https://9syu3.csb.app" target="_blank"><image src="Imagens/Publi.png" alt="Ad" width="350px" height="120px" title="Jogue agora"></a>
+        </div>
     </div>
-    <footer>
-        
-    </footer>
 </body>
 </html>
