Finalizacao do projeto humilde

--- a/animes.html
+++ b/animes.html
@@ -189,7 +189,9 @@
                 <h4>Gêneros: </h4>
                 <h5>Terror</h5> <h5>Aventura</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Quando seus gostos são levados em consideração, realizam tudo com uma maestria impossível de se encontrar em outro lugar.
+                Por esse motivo, vivem no mundo idealizado pelos seus sonhos: tudo está em volta de seus interesses.
+                Como prova de tamanha qualidade e excelência, levantam um império formado por pessoas que admiram o trabalho.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
