--- a/jogos.html
+++ b/jogos.html
@@ -105,19 +105,19 @@
         <div id="quinto">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Ação</h5> <h5>Aventura</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">O anseio pelo conhecimento e pelo reconhecimento é algo que movimenta a humanidade, no mundo todo há pessoas dispostas a visitar lugares distantes e perigosos, com diversas armadilhas e enigmas complexos apenas para nutrir seu desejo de ser reconhecido por algum feito. Porém, nem todos têm a alegria de voltar de suas aventuras para contar a história.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome: Tomb Raider</p>
+                        <p class="formatacao-texto">Tomb Raider é um videojogo que se apresenta em mundo semi-aberto e que combina acção e aventura, plataformas, exploração, elementos de RPG e mecanismos de sobrevivência, apresentado numa perspectiva de terceira pessoa. O jogador assume o controle da personagem principal, Lara Croft.</p>
                     </div>
                     <div class="trailer">
-                        <a href="" target="youtube"><img width="380" src=""></a>
+                        <a href="" target="youtube"><img width="380" src="https://upload.wikimedia.org/wikipedia/pt/0/03/Tr2012cover.jpg"></a>
                     </div>
                 </div>
             </details>
@@ -126,19 +126,22 @@
         <div id="sexto">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Ficção Científica</h5> <h5>Aventura</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Após muitos anos de evolução tecnológica, a humanidade finalmente atingiu a viagem espacial.
+                Porém algo assola o universo, as “trevas”, que consomem toda a energia que puderem, podem acabar destruindo o universo que conhecemos.
+                Contudo, existem aqueles que não se conformam em ficar apenas olhando, que querem erguer suas cabeças e lutar, e que pensam “Não é só levar uma lanterna?”.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome: Destiny 2</p>
+                        <p class="formatacao-texto">O jogador parte em uma jornada para recuperar sua Luz e encontrar uma maneira de derrotar Ghaul e seu exército da Legião Vermelha e recuperar a última cidade.
+                            Como o Destiny original, o jogo apresenta pacotes de expansão que promovem a história e adicionam novos conteúdos e missões.</p>
                     </div>
                     <div class="trailer">
-                        <a href="" target="youtube"><img width="380" src=""></a>
+                        <a href="" target="youtube"><img width="380" src="https://upload.wikimedia.org/wikipedia/pt/9/98/Destiny_2_capa.jpg"></a>
                     </div>
                 </div>
             </details>
